# sphinx-demo

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  usage.rst
docs/autoapi/sphinx_demo/: index.rst
docs/autoapi/sphinx_demo/my_module/: index.rst
docs_autoapi/: conf.py  index.rst
docs_autosummary/: conf.py  index.rst
src/sphinx_demo/: __init__.py  my_module.py
